[gd_scene load_steps=5 format=1]

[ext_resource path="res://Malamikoj/Malamiko.gd" type="Script" id=1]
[ext_resource path="res://Malamikoj/partiklo.png" type="Texture" id=2]
[ext_resource path="res://Malamikoj/malamiko.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 36.211

[node name="Malamiko" type="KinematicBody2D"]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 4
collision/mask = 3
collision/margin = 0.08
script/script = ExtResource( 1 )

[node name="Partiklo" type="Particles2D" parent="."]

visibility/opacity = 0.3
config/amount = 32
config/lifetime = 1.0
config/emitting = false
config/process_mode = 1
config/local_space = false
config/texture = ExtResource( 2 )
params/direction = 0.0
params/spread = 10.0
params/linear_velocity = 0.0
params/spin_velocity = 0.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 9.8
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 1.0
params/final_size = 1.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="Aspekto" type="Sprite" parent="."]

transform/scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 3 )

[node name="Tempilo" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="Mortigxi" type="Tween" parent="."]

playback/process_mode = 1
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="Aperi" type="Tween" parent="."]

playback/process_mode = 1
playback/active = false
playback/repeat = false
playback/speed = 1.0

[connection signal="timeout" from="Tempilo" to="." method="_on_Tempilo_timeout"]

[connection signal="tween_complete" from="Mortigxi" to="." method="_on_Mortigxi_tween_complete"]

[connection signal="tween_complete" from="Aperi" to="." method="_on_Aperi_tween_complete"]


